--- a/okteto-pipeline.yml
+++ b/okteto-pipeline.yml
@@ -1,3 +1,4 @@
+icon: https://apps.okteto.com/movies/icon.png
 deploy:
   - okteto build -t okteto.dev/api:${IF} api
   - okteto build -t okteto.dev/frontend:${IF} frontend
